# mcca

./: .gitignore  README.md  app.py  cli.py  client.py  config.json  config.py  pyproject.toml  session.py
connectors/: stdio.py
docs/: configuration.md  index.md  installation.md  llm_integration.md  streaming.md  tool_execution.md
llm/: gemini.py
mcpclient/: client.py  config.py  session.py
mcpclient/connectors/: base.py  stdio.py
mcpclient/llm/: base.py  gemini.py  gpt4o.py
mcpclient/tools/: execution.py  extraction.py
